--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "build:docs": "vitepress build docs"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@vitejs/plugin-vue": "^1.0.5",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.17.0",
     "postcss": "^8.2.4",
     "prettier": "^2.2.1",
     "rollup": "^2.36.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
     "rollup-plugin-vue": "^6.0.0",
@@ -61,10 +64,11 @@
     "vue": "^3.0.5"
   },
   "peerDependencies": {
-    "vue": "^3.0.0",
-    "date-fns": "^2.16.1"
+    "date-fns": "^2.16.1",
+    "vue": "^3.0.0"
   },
   "dependencies": {
+    "@holiday-jp/holiday_jp": "^2.3.0",
     "date-fns": "^2.16.1"
   }
 }
